# 2026nukon

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  folder-summary.html  unagi.md
api/: bruno.json  (+1 more)
freeai/app/tauri-plugin-glass-camera/: Cargo.toml  build.rs
freeai/app/tauri-plugin-glass-camera/android/: .gitignore  build.gradle.kts  proguard-rules.pro
freeai/app/tauri-plugin-glass-camera/ios/: .gitignore  Package.swift
freeai/app/tauri-plugin-glass-camera/ios/Sources/: GlassCameraPlugin.swift
freeai/app/tauri-plugin-glass-camera/permissions/: default.toml
freeai/app/tauri-plugin-glass-camera/permissions/autogenerated/: reference.md
freeai/app/tauri-plugin-glass-camera/permissions/schemas/: schema.json
freeai/app/tauri-plugin-glass-camera/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
freeai/app/tauri-plugin-media-remote/: Cargo.toml  build.rs
freeai/app/tauri-plugin-media-remote/android/: build.gradle.kts  proguard-rules.pro
freeai/app/tauri-plugin-media-remote/ios/: Package.swift
freeai/app/tauri-plugin-media-remote/ios/Sources/: MediaRemotePlugin.swift
freeai/app/tauri-plugin-media-remote/permissions/: default.toml
freeai/app/tauri-plugin-media-remote/permissions/autogenerated/: reference.md
freeai/app/tauri-plugin-media-remote/permissions/schemas/: schema.json
freeai/app/tauri-plugin-media-remote/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
freeai/app/tauri-plugin-photo-inbox/: Cargo.toml  build.rs
freeai/app/tauri-plugin-photo-inbox/android/: build.gradle.kts  proguard-rules.pro
freeai/app/tauri-plugin-photo-inbox/ios/: Package.swift
freeai/app/tauri-plugin-photo-inbox/ios/Sources/: PhotoInboxPlugin.swift
freeai/app/tauri-plugin-photo-inbox/permissions/: default.toml
freeai/app/tauri-plugin-photo-inbox/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+88 files in other folders)
