[package]
name = "tauri-plugin-glass-camera"
version = "0.1.0"
description = "Captures photos from Ray-Ban Meta glasses via the Meta Wearables Device Access Toolkit"
authors = ["Nukon"]
edition = "2021"
links = "tauri-plugin-glass-camera"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
thiserror = "2"

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2", features = ["wry"] }
