[package]
name = "tauri-plugin-photo-inbox"
version = "0.1.0"
description = "Watches the phone photo library for new captures imported from the Metaglass"
authors = ["Nukon"]
edition = "2021"
links = "tauri-plugin-photo-inbox"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
thiserror = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
base64 = "0.22"

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2", features = ["wry"] }
